[gd_scene load_steps=3 format=3 uid="uid://b1xuaj1s3dwef"]

[ext_resource type="Texture2D" uid="uid://co4jpppqbvflr" path="res://icon.svg" id="1_2wp50"]
[ext_resource type="Script" uid="uid://bfjhb57v8pdq2" path="res://Modules/Interaction/Computer/desktop_item.gd" id="1_td6n6"]

[node name="Desktop Item" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_td6n6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -77.5
offset_right = 64.0
offset_bottom = 77.5
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="VBoxContainer"]
clip_contents = true
layout_mode = 2
texture = ExtResource("1_2wp50")
expand_mode = 5
stretch_mode = 5

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Desktop Item"
horizontal_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -78.0
offset_right = 66.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
